--- a/client/jms/pom.xml
+++ b/client/jms/pom.xml
@@ -45,12 +45,12 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.hornetq</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>hornetq-core-client</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.hornetq</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>hornetq-jms-client</artifactId>
         </dependency>
 
