--- a/messaging/pom.xml
+++ b/messaging/pom.xml
@@ -69,17 +69,17 @@
 	    </dependency>
 
         <dependency>
-            <groupId>org.hornetq</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>hornetq-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.hornetq</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>hornetq-jms</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.hornetq</groupId>
+            <groupId>com.seeburger.as</groupId>
             <artifactId>hornetq-ra</artifactId>
         </dependency>
 
