--- a/client/jms/pom.xml
+++ b/client/jms/pom.xml
@@ -95,12 +95,12 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.xnio</groupId>
+            <groupId>com.seeburger.xnio</groupId>
             <artifactId>xnio-api</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.xnio</groupId>
+            <groupId>com.seeburger.xnio</groupId>
             <artifactId>xnio-nio</artifactId>
         </dependency>
 
