--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,7 @@
         <version.org.jboss.ws.spi>2.0.3.GA</version.org.jboss.ws.spi>
         <version.org.jboss.ws.jaxws-jboss-httpserver-httpspi>1.0.1.GA</version.org.jboss.ws.jaxws-jboss-httpserver-httpspi>
         <version.org.jboss.xb>2.0.3.GA</version.org.jboss.xb>
-        <version.org.jboss.xnio>3.0.9.GA</version.org.jboss.xnio>
+        <version.org.jboss.xnio>3.0.9.GA.SEE1</version.org.jboss.xnio>
         <version.org.jboss.xnio.xnio-api>${version.org.jboss.xnio}</version.org.jboss.xnio.xnio-api>
         <version.org.jboss.xnio.xnio-nio>${version.org.jboss.xnio}</version.org.jboss.xnio.xnio-nio>
         <version.org.jgroups>3.0.6.Final</version.org.jgroups>
@@ -5169,13 +5169,13 @@
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.xnio</groupId>
+                <groupId>com.seeburger.xnio</groupId>
                 <artifactId>xnio-api</artifactId>
                 <version>${version.org.jboss.xnio.xnio-api}</version>
             </dependency>
 
             <dependency>
-                <groupId>org.jboss.xnio</groupId>
+                <groupId>com.seeburger.xnio</groupId>
                 <artifactId>xnio-nio</artifactId>
                 <version>${version.org.jboss.xnio.xnio-nio}</version>
             </dependency>
