--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -78,11 +78,11 @@
             <artifactId>jboss-threads</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.xnio</groupId>
+            <groupId>com.seeburger.xnio</groupId>
             <artifactId>xnio-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.xnio</groupId>
+            <groupId>com.seeburger.xnio</groupId>
             <artifactId>xnio-nio</artifactId>
         </dependency>
         <dependency>
