--- a/remoting/pom.xml
+++ b/remoting/pom.xml
@@ -115,7 +115,7 @@
             <artifactId>jboss-sasl</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jboss.xnio</groupId>
+            <groupId>com.seeburger.xnio</groupId>
             <artifactId>xnio-api</artifactId>
         </dependency>
 
